# InstinctMJ

./: CONTRIBUTING.md  README.md  pyproject.toml
src/instinct_mj/actuators/: actuator_cfg.py
src/instinct_mj/assets/: unitree_g1.py
src/instinct_mj/assets/resources/unitree_g1/urdf/: g1_29dof_torsobase_popsicle_kf6u060w_freebase.urdf  tmpbo0m7rs1_with_terrain.urdf  tmplthhjihz_with_terrain.urdf  tmpuuhe27v3_with_terrain.urdf
src/instinct_mj/envs/: manager_based_rl_env.py
src/instinct_mj/envs/mdp/commands/: shadowing_command.py
src/instinct_mj/envs/mdp/rewards/: regularizations.py
src/instinct_mj/monitors/: monitors.py
src/instinct_mj/sensors/grouped_ray_caster/: grouped_ray_caster.py  grouped_ray_caster_camera.py
src/instinct_mj/tasks/parkour/: README.md
src/instinct_mj/tasks/parkour/config/g1/: g1_parkour_target_amp_cfg.py
src/instinct_mj/tasks/shadowing/: README.md
src/instinct_mj/tasks/shadowing/beyondmimic/: README.md
src/instinct_mj/utils/: motion_validation.py
src/instinct_mjlab/envs/: manager_based_rl_env.py  scene.py
src/instinct_mjlab/envs/mdp/commands/: commands_cfg.py  shadowing_command.py
src/instinct_mjlab/envs/mdp/rewards/: regularizations.py
src/instinct_mjlab/rl/: config.py  vecenv_wrapper.py
src/instinct_mjlab/scene/: scene.py
src/instinct_mjlab/scripts/: depth_probe.py
src/instinct_mjlab/scripts/instinct_rl/: train.py
src/instinct_mjlab/sensors/volume_points/: volume_points.py  volume_points_cfg.py
src/instinct_mjlab/tasks/config/: scene_style_cfg.py
src/instinct_mjlab/tasks/locomotion/config/g1/: flat_env_cfg.py  rl_cfgs.py
src/instinct_mjlab/tasks/mdp/: observations.py
src/instinct_mjlab/tasks/parkour/config/: parkour_env_cfg.py
src/instinct_mjlab/tasks/parkour/mdp/: rewards.py  terminations.py
src/instinct_mjlab/tasks/shadowing/: README.md
src/instinct_mjlab/tasks/shadowing/beyondmimic/: beyondmimic_env_cfg.py
src/instinct_mjlab/tasks/shadowing/perceptive/: perceptive_env_cfg.py
src/instinct_mjlab/tasks/shadowing/perceptive/config/g1/: rl_cfgs.py  (+2 more)
src/instinct_mjlab/tasks/shadowing/whole_body/: shadowing_env_cfg.py
src/instinct_mjlab/terrains/: terrain_generator.py  terrain_generator_cfg.py  terrain_importer.py  terrain_importer_cfg.py
src/instinct_mjlab/terrains/height_field/: hf_terrains_cfg.py
src/instinct_mjlab/terrains/trimesh/: __init__.py  mesh_terrains.py  mesh_terrains_cfg.py
src/instinct_mjlab/terrains/virtual_obstacle/: edge_cylinder.py
(+9 files in other folders)
